--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 
 body
 {
-	background-image:url(Picture/background-world-map-1.gif);
+	background-image:url(Picture/backgroundImage.jpg);
 }
 
 #button
