--- a/style1.css
+++ b/style1.css
@@ -22,7 +22,8 @@
 {
 	color: #DB320E; 
 	font-weight: bold; 
-	font-style: italic
+	font-style: italic;
+	text-decoration: none
 }
 
 .nav_row
@@ -113,12 +114,12 @@ body
 	color:#CFCFCF;
 }
 
-.eventmenu
+.servicemenu
 {
 	position:relative;
 }
 
-.eventmenu>.event {
+.servicemenu>.service {
     top: 0;
     left: 100%;
     margin-top: 0px;
@@ -128,7 +129,7 @@ body
     border-radius: 0 6px 6px 6px;
 }
 
-.eventmenu>a:after {
+.servicemenu>a:after {
     display: block;
     content: " ";
     float: right;
@@ -142,29 +143,29 @@ body
     margin-right: -10px;
 }
 
-.eventmenu:hover>.event {
+.servicemenu:hover>.service {
     display: block;
 }
 
-.event
+.service
 {
 	width:300px;
 	padding:20px;
 }
 
-#eventlist
+#servicelist
 {
-	background-image:url(Picture/header_background.png);
+	background-image:url(Picture/servicelistback.png);
 }
 
-#eventlist li a
+#servicelist li a
 {
 	border-bottom:1px solid white;
 	text-decoration:none;
 	color:#CFCFCF;
 }
 
-#eventlist li a:hover
+#servicelist li a:hover
 {
 	color:black;
 }
