--- a/style1.css
+++ b/style1.css
@@ -170,6 +170,19 @@ body
 	color:black;
 }
 
+#features
+{
+	background-color: #BDBDBD;
+	border-radius: 25px;
+	margin-left:5px;
+}
+
+#featuresImg
+{
+	margin-left:auto; 
+	margin-right:auto
+}
+
 .listStyle
 {
 	color:#22A2DD;
