--- a/style1.css
+++ b/style1.css
@@ -42,6 +42,10 @@ body
 	border:0px;
 }
 
+#button:hover{
+	background-color:#BDBDBD;
+}
+
 .dropdown-content {
     display: none;
     position: absolute;
