--- a/style1.css
+++ b/style1.css
@@ -202,7 +202,7 @@ body
 	color:#22A2DD;
 }
 
-#applicationHead
+#formHead
 {
 	background:linear-gradient(to top, #1e5799 0%,#3b9be5 100%);
 	color:white;
